Fix font size on small screens

--- a/style.css
+++ b/style.css
@@ -22,12 +22,16 @@ img {
 
 .site-title {
 	font-family: "Arial Rounded MT Bold", Calibri, Arial, sans-serif;
-	font-size: 2.5em;
+	font-size: 3.25rem;
 	margin: 0;
 	text-align: center;
 }
 
 @media (min-width: 64rem) {
+	.site-title {
+		font-size: 2.5rem;
+	}
+
 	.site-mascot {
 		display: block;
 		margin-left: auto;
